[package]
name = "sassers"
description = "A Sass compiler in Rust"
version = "0.11.0-shitshow"
authors = ["Carol Nichols <carol.nichols@gmail.com>"]
repository = "https://github.com/carols10cents/sassers"
readme = "README.md"
license = "MIT"

[dependencies]
docopt = "0.6.64"
regex = "0.1.38"
log = "0.3"
env_logger = "0.3"
