[package]
name = "sassers"
description = "A Sass compiler in Rust"
version = "0.13.4-maybe-not-broken"
authors = ["Carol Nichols <carol.nichols@gmail.com>"]
repository = "https://github.com/carols10cents/sassers"
readme = "README.md"
license = "MIT"

[badges]
travis-ci = { repository = "carols10cents/sassers" }
appveyor = { repository = "carols10cents/sassers" }

[dependencies]
docopt = "0.6.64"
regex = "0.1.38"
log = "0.3"
env_logger = "0.3"
