[package]
name = "sassers"
description = "A Sass compiler in Rust"
version = "0.13.4-maybe-not-broken"
authors = ["Carol Nichols <carol.nichols@gmail.com>"]
repository = "https://github.com/carols10cents/sassers"
readme = "README.md"
license = "MIT"
edition = "2018"

[badges]
travis-ci = { repository = "carols10cents/sassers" }
appveyor = { repository = "carols10cents/sassers" }

[dependencies]
docopt = "^1.0.2"
regex = "^1.1.0"
log = "^0.4.6"
env_logger = "^0.6.0"
